# rust-tokenizer

./: .gitignore  README.md
tokenizer-client/: Cargo.toml
tokenizer-client/src/: main.rs
tokenizer-server/: Cargo.toml
tokenizer-server/src/: main.rs
